SERVER-50036 logd() fails with invalid format string